--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "simple-electron-react",
-  "productName": "React Electron App",
+  "name": "buglogger",
+  "productName": "BugLogger",
   "version": "1.0.0",
-  "description": "Simple boilerplate for building Electron apps with React",
+  "description": "App bug tracker for teams",
   "license": "MIT",
   "engines": {
     "node": ">=9.0.0",
@@ -21,8 +21,13 @@
     "postpackage": "electron-packager ./ --out=./release-builds"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
+    "moment": "^2.29.1",
+    "mongoose": "^5.10.10",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.13.1",
+    "react-moment": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
